[metadata]
name = optionmodels

url = https://github.com/GBERESEARCH/optionmodels

author = GBERESEARCH
author_email = gberesearch@gmail.com
version = attr: optionmodels.__version__

description = Option pricing and volatility calibration tools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir=
    =src
packages=find:

install_requires = 
    numpy >= 1.16.2
    scipy >= 1.4.1 

[options.packages.find]
where=src